5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4477/executions/1575_1331.log
== TEST (2019-03-28 11:28:56) 
-- CODE:
var1 = 50 // 3
-- OUTPUT:
16
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:29:07) 
-- CODE:
var1 = 50 // 3
print(var1)
-- OUTPUT:
16
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:30:14) 
-- CODE:
var1 = 50 // 3
print(var1)
var2 = 50 % 3
print(var2)
-- OUTPUT:
16
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 11:30:18) 
-- CODE:
var1 = 50 // 3
print(var1)
var2 = 50 % 3
print(var2)
-- EXECUTION TIME:
0.139123
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 02:13:20) 
-- CODE:
var1 = 50 // 3
print(var1)
var2 = 50 % 3
print(var2)
-- EXECUTION TIME:
0.118935
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 17:05:11) 
-- CODE:
# Variaveis
guerreiro = 3
ouro = 50
# Divisão inteira
Tpg = ouro // guerreiro          # Tpg = Total por guerreiro
# Resto da divisão
Tpi = ouro % guerreito           # Tpi = Total para informante

# Saidas
print(Tpg)
print(Tpi)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    Tpi = ouro % guerreito           # Tpi = Total para informante
NameError: name 'guerreito' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 17:05:47) 
-- CODE:
# Variaveis
guerreiro = 3
ouro = 50
# Divisão inteira
Tpg = ouro // guerreiro          # Tpg = Total por guerreiro
# Resto da divisão
Tpi = ouro % guerreiro           # Tpi = Total para informante

# Saidas
print(Tpg)
print(Tpi)
-- OUTPUT:
16
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 17:05:51) 
-- CODE:
# Variaveis
guerreiro = 3
ouro = 50
# Divisão inteira
Tpg = ouro // guerreiro          # Tpg = Total por guerreiro
# Resto da divisão
Tpi = ouro % guerreiro           # Tpi = Total para informante

# Saidas
print(Tpg)
print(Tpi)
-- EXECUTION TIME:
0.191024
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
